aks/network/policy-2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: api
spec:
  podSelector:
    matchLabels:
      role: api
    ingress: []
  # ingress: 
  # - from:
  #   - podSelector:
  #       matchLabels:
  #         role: web
  #         app.kubernetes.io/instance: nginx-ingress
